--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <link rel="apple-touch-icon-precomposed" href="img/app.png">
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/favicon.png">
         
     	<meta name="description" content="Website oficial do programa Show Mulher" />
 		<meta name="author" content="Agência Caixa Preta" />
